@@ -47,8 +47,21 @@ gdb_load ${binfile}
 
 # Testcase for backtrace/1435.
 
-gdb_test "run" "Program received signal SIGTRAP.*" \
-         "run past gdb1435"
+# We use gdb_run_cmd so this stands a chance to work for remote
+# targets too.
+gdb_run_cmd
+
+gdb_expect {
+    -re "Program received signal SIGTRAP.*$gdb_prompt $" {
+	pass "run past gdb1435"
+    }
+    -re ".*$gdb_prompt $" {
+	fail "run past gdb1435"
+    }
+    timeout {
+	fail "run past gdb1435 (timeout)"
+    }
+}
 
 gdb_test "backtrace 10" \
 	"#1\[ \t]*$hex in gdb1435.*\r\n#2\[ \t\]*$hex in main.*" \
