@@ -1,5 +1,10 @@
 2003-11-23  Mark Kettenis  <kettenis@gnu.org>
 
+	* gdb.arch/i386-unwind.exp: Use gdb_run_cmd and gdb_expect instead
+	of gdb_test "run".
+
+2003-11-23  Mark Kettenis  <kettenis@gnu.org>
+
 	* gdb.arch/i386-unwind.exp: Don't use runto_main.  Change
 	"continue" into "run".
 
